fixing we are hiring padding on mobile

--- a/style.css
+++ b/style.css
@@ -565,7 +565,7 @@ form input:focus, form textarea:focus {
     line-height: 1.3;
   }
   p {
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
   section.contact {
     padding: 0 1rem;
@@ -582,6 +582,10 @@ form input:focus, form textarea:focus {
 
   .thumbs-component img, .we-are-hiring img {
     display: none;
+  }
+  section.we-are-hiring .content {
+    width: 100%;
+    padding: 1rem;
   }
 
   section.contact p {
